fix bug on media screen not covered by earlier set screen on projects show

--- a/public/stylesheets/projects.css
+++ b/public/stylesheets/projects.css
@@ -141,3 +141,9 @@
         margin-right: 20px;
     }
 }
+
+@media screen and (min-width: 601px) and (max-width: 850px) {
+    #project-show {
+        width: 475px;
+    }
+}
